--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 id="header">Krystal's Awesome Random Student Picker !</h1>
   <button id="pickButton">PICK</button>
   <h3 id="choice">&nbsp;</h3>
-  <img src="ftsk.png">
+  <img src="http://i.imgur.com/73Zgpw5.png">
   <h3 id="attendance">Attendance</h3>
   <ul id=aList></ul>
 </body>
