--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h3 id="choice">&nbsp;</h3>
   <img src="http://i.imgur.com/73Zgpw5.png">
   <h3 id="attendance">Attendance</h3>
-  <ul id=alist></ul>
+  <ul id="aList"></ul>
 </body>
 
 </html>
