--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body id="body">
   <h1 id="header">Krystal's Awesome Random Student Picker !</h1>
   <button id="pickButton">PICK</button>
+  <button id="pickButton2">PICK 2</button>
   <h3 id="choice">&nbsp;</h3>
   <img src="http://i.imgur.com/73Zgpw5.png">
   <h3 id="attendance"> Attendance</h3>
